--- a/css/css.css
+++ b/css/css.css
@@ -1,12 +1,79 @@
 @charset "utf-8";
 /* CSS Document */
-
-body{
-font: 14px/1.6 "Hiragino Kaku Gothic Pro",Osaka,"メイリオ","ＭＳ Ｐゴシック","MS PGothic",Verdana,Arial,sans-serif;
-margin:0;
-color:#313131;
+html, body{
+    height: 400vh;
 }
 
+body{
+    font: 14px/1.6 "Hiragino Kaku Gothic Pro",Osaka,"メイリオ","ＭＳ Ｐゴシック","MS PGothic",Verdana,Arial,sans-serif;
+    margin: 0;
+    color: #313131;
+}
+
+div{
+    height: 100vh;
+    padding: 30px;
+    border: 2px solid blue;
+}
+
+#top{
+    background-color: #fcff59;
+}
+
+#profile{
+    background-color: #a4ff59;
+}
+
+#product{
+    background-color: #59ff9e;
+}
+
+#link{
+    background-color: #59e6ff;
+}
+
+/* ナビケーションバー */
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #1b2538;
+    top: 0;
+    width: 100vw;
+    position: fixed;
+}
+
+li{
+    float: left;
+    border-right: 1px solid #bbbbbb;
+}
+
+li:last-child{
+    border-right: none;
+}
+
+li a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active){
+    background-color: #a9bce2;
+}
+
+.active{
+    background-color: #da3c41;
+}
+
+footer{
+    text-align: center;
+}
+
+/*
 img{
 outline:none;
 border-style:none;
@@ -30,8 +97,10 @@ a:hover {
     -moz-transition: all 0.5s;
     transition: all 0.5s;
 }
+*/
 
 /*****HEADER*****/
+/*
 header{
     display: block;
     width:60%;
@@ -58,8 +127,9 @@ header p{
     color:#313131;
     float: left;
 }
-
+*/
 /*****BRANDING*****/
+/*
 #branding{
     display: block;
     width: 60%;
@@ -75,8 +145,9 @@ header p{
     font-size: 120%;
     padding-left: 3%;
 }
-
+*/
 /*****NAV*****/
+/*
 nav{
     width: 100%;
     border-top: 1px solid orange;
@@ -109,8 +180,9 @@ nav li:hover{
     transition: background-color 0.5s ease-out;
     color: #fff;
 }
-
+*/
 /*****ARTICLE*****/
+/*
 section{
     display: block;
     width: 60%;
@@ -194,3 +266,4 @@ footer address{
     color: #fff;
     letter-spacing: 5px;
 }
+*/
