--- a/css/css.css
+++ b/css/css.css
@@ -3,6 +3,8 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    border: solid 1px;
 }
 
 html{scroll-behavior: smooth;}
@@ -42,34 +44,54 @@ li a:hover:not(.active){background-color: #a9bce2;}
 
 /* main content */
 div#top, div#product, div#profile{
-    position: static;
+    height: 100vh;
+}
+div#top, div#product, div#profile, div#link{
     padding: 5vh 0 0 0;
+}
+div#link{
+    padding: 3vh 0 0 0;
+    height: 95vh;
+}
+.absolute{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    border: solid 1px red;
+}
+.absolute#absProfile{
+    top: 100vh;
+}
+.absolute#absProduct{
+    top: 200vh;
+}
+.relative{
+    position: relative;
     width: 100%;
     height: 100vh;
 }
-
-div#link{
-    height: 95vh;
+.centering{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%,-50%);
+    -webkit-transform : translate(-50%,-50%);
+    transform : translate(-50%,-50%);
 }
 
 #profImage{
-    display: block;
     width: 30vw;
     height: 25vw;
-    margin: auto;
 }
-
 #productImage{
-    display: block;
-    width: 60%;
-    height: 60%;
-    margin: auto;
+    width: 60vw;
+    height: 40vw;
 }
 
-#top{background-color: #fcff59;}
-#profile{background-color: #a4ff59;}
-#product{background-color: #59ff9e;}
-#link{background-color: #59e6ff;}
+div#top{background-color: #fcff59;}
+div#profile{background-color: #a4ff59;}
+div#product{background-color: #59ff9e;}
+div#link{background-color: #59e6ff;}
 
 /* footer */
 footer{
